collection 2 added: get and post working
